Your commit message here

--- a/EarnWithUs.html
+++ b/EarnWithUs.html
@@ -59,6 +59,10 @@
                         <li class="navitem">
                             <a class="nav-link" href="./Terms.html"><i class="fa-solid fa-handshake"></i> Terms and Policy</a>
                         </li>
+                        <li class="navitem">
+                            <a class="nav-link" href="./dmca.html"><i class="fa-solid fa-dmca"></i> DMCA Policy</a>
+                        </li>
+                        </li>
                     </ul>
                 </div>
             </div>
