--- a/Terms.html
+++ b/Terms.html
@@ -2,42 +2,42 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Terms of Service</title>
-  <link rel="stylesheet" href="./styles/Terms.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/style-2.css">
   <link rel="stylesheet" href="./styles/style-3.css">
   <link rel="stylesheet" href="./styles/Terms.css">
-
+  <link rel="stylesheet" href="./styles/Responsive.css">
 </head>
-
-
 
 <body class="vh-100 d-flex flex-column scroll-none">
 
   <div class="row g-0 flex-grow-1">
-    <div id="sidebar" class="col-3 d-none d-lg-flex flex-column ">
+    <div id="sidebar" class="col-3 d-lg-flex flex-column">
+      <button class="cancel-btn" onclick="toggleSidebar()">&times;</button> <!-- Cancel button to close the sidebar -->
+
       <div id="cta" class="row g-0 p-3 ">
         <a class="logo" href="./index.html">
           SHAREHUB
         </a>
       </div>
+
+      <!-- Search bar and buttons in sidebar for mobile view -->
+
+
       <div id="menu" class="row g-0 flex-grow-1 p-3">
         <div class="col overflow-auto">
           <ul class="nav nav-pills nav-fill d-flex flex-column">
@@ -45,8 +45,7 @@
               <a class="nav-link" aria-current="page" href="./Users.html"> Dashboard</a>
             </li>
             <li class="navitem">
-              <a class="nav-link " href="./edit-profile.html">
-                Profile</a>
+              <a class="nav-link " href="./edit-profile.html"> Profile</a>
             </li>
             <li class="navitem">
               <a class="nav-link" href="#"> Settings</a>
@@ -55,25 +54,53 @@
               <a class="nav-link"> Activity</a>
             </li>
             <li class="navitem">
-              <a class="nav-link " href="./faq.html"></i>Faqs</a>
+              <a class="nav-link" href="./faq.html">FAQ</a>
             </li>
             <li class="navitem">
               <a class="nav-link active" href="./Terms.html"> Terms and Policy</a>
             </li>
+            <li class="navitem">
+              <a class="nav-link " href="./dmca.html">DMCA Policy</a>
+            </li>
           </ul>
-
         </div>
+      </div>
 
+
+      <div class="search_wrap search_wrap_6 smob">
+        <div class="search_box ">
+          <input type="text" class="input" placeholder="search...">
+          <div class="btn btn_common">
+            <i class="fas fa-search"></i>
+          </div>
+        </div>
       </div>
-      <div id="cap" class="row g-0 p-3 ">
+
+      <div class="sidebar-buttons">
+        <a class="button upload-button btn btn-primary" href="./signin.html">Login <i
+            class="fa-solid fa-arrow-right"></i></a>
+        <a class="button logout-button btn btn-danger" href="./signup.html">Sign Up <i
+            class="fa-solid fa-upload"></i></a>
       </div>
+
+
+      <div id="cap" class="row g-0 p-3"></div>
     </div>
+
     <div id="main" class="col d-flex flex-column">
+      <!-- Toggle button for mobile -->
+      <div class="toggle-btn p-3" onclick="toggleSidebar()">
+        <i class="fa-solid fa-bars"></i>
+        <h2 class="logo-m" href="./index.html">
+          SHAREHUB
+        </h2>
+      </div>
+
       <div id="filters" class="row g-0 p-3 border-bottom">
         <div id="navbar" class="row g-0 p-3 bg-body-tertiary border-bottom">
           <div class="container text-center">
-            <div class="row">
-              <div class="col hhead">
+            <div class="row justify-content-between align-items-center">
+              <div class="col-lg-6 col-md-6 SeachB">
                 <div class="search_wrap search_wrap_3">
                   <div class="search_box">
                     <input type="text" class="input" placeholder="search...">
@@ -82,38 +109,28 @@
                     </div>
                   </div>
                 </div>
-                <div class="col hhead">
+              </div>
 
-                  <div style="display: flex; color: white; align-items: center ; gap: 12px;
-                                  ">
-                    <i class="fa-regular fa-bell"></i>
-                    <div class="user-profile">
-                      <img class="user-profile-img" src="./assets/profile_icon.png" alt="User Profile">
-                      <span class="user-name">Admin</span>
-                    </div>
-                  </div>
-
-                  <div>
-                    <a class="button upload-button" href="./Upload.html">Upload <i class="fa-solid fa-upload"></i></a>
-                    <a class="button logout-button" href="./signin.html">Login <i class="fa-solid fa-arrow-right"></i></a>
-                  </div>
+              <div
+                class="col-lg-6 col-md-6 text-end d-flex justify-content-center justify-content-lg-end align-items-center">
+                <div class="user-profile me-3">
+                  <img class="user-profile-img" src="./assets/profile_icon.png" alt="User Profile">
+                  <span class="user-name">Admin</span>
                 </div>
 
+                <div class="btngroup">
+                  <a class="button upload-button btn btn-primary" href="./Upload.html">Upload <i
+                      class="fa-solid fa-upload"></i></a>
+                  <a class="button logout-button btn btn-danger" href="./signin.html">Login <i
+                      class="fa-solid fa-arrow-right"></i></a>
+                </div>
               </div>
             </div>
-
-
-
           </div>
-
-          <H1 style="    color: white;
-                    padding: 25px 0 0 0;
-                
-                    ">Term And Policy</H1>
+          <h1 style="color: white; padding: 25px 0 0 0;">Terms of Service</h1>
         </div>
+
         <div id="content" class="row g-0 flex-grow-1 p-3">
-
-
           <div class="wrapper">
             <h1>Terms of Service </h1>
 
@@ -260,22 +277,33 @@
 
 
 
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
-          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"></script>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
-            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"></script>
 
-          <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
-</html>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Function to toggle sidebar on mobile screens
+    function toggleSidebar() {
+      const sidebar = document.getElementById("sidebar");
+      sidebar.classList.toggle("show");
+    }
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha512-3P8rXCuGJdNZOnUx/03c1jOTnMn3rP63nBip5gOP2qmUh5YAdVAvFZ1E+QLZZbC1rtMrQb+mah3AfYW11RUrWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
