--- a/faq.html
+++ b/faq.html
@@ -2,243 +2,272 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frequently Asked Questions</title>
-  <link rel="stylesheet" href="./styles/faq.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>FAQs</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/style-2.css">
-    <link rel="stylesheet" href="./styles/style-3.css">
+
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/style-2.css">
+  <link rel="stylesheet" href="./styles/style-3.css">
+  <link rel="stylesheet" href="./styles/faq.css">
+  <link rel="stylesheet" href="./styles/Responsive.css">
 </head>
 
-  <body class="vh-100 d-flex flex-column scroll-none">
+<body class="vh-100 d-flex flex-column scroll-none">
 
-    <div class="row g-0 flex-grow-1">
-      <div id="sidebar" class="col-3 d-none d-lg-flex flex-column ">
-        <div id="cta" class="row g-0 p-3 ">
-          <a class="logo" href="./index.html">
-            SHAREHUB
-          </a>
-        </div>
-        <div id="menu" class="row g-0 flex-grow-1 p-3">
-          <div class="col overflow-auto">
-            <ul class="nav nav-pills nav-fill d-flex flex-column">
-              <li class="navitem">
-                <a class="nav-link" aria-current="page" href="./Users.html"> Dashboard</a>
-              </li>
-              <li class="navitem">
-                <a class="nav-link " href="./edit-profile.html">
-                  Profile</a>
-              </li>
-              <li class="navitem">
-                <a class="nav-link" href="#"> Settings</a>
-              </li>
-              <li class="navitem">
-                <a class="nav-link"> Activity</a>
-              </li>
-              <li class="navitem">
-                <a class="nav-link active" href="./faq.html"></i>FAQ</a>
-              </li>
-              <li class="navitem">
-                <a class="nav-link" href="./Terms.html"> Terms and Policy</a>
-              </li>
-            </ul>
+  <div class="row g-0 flex-grow-1">
+    <div id="sidebar" class="col-3 d-lg-flex flex-column">
+      <button class="cancel-btn" onclick="toggleSidebar()">&times;</button> <!-- Cancel button to close the sidebar -->
+
+      <div id="cta" class="row g-0 p-3 ">
+        <a class="logo" href="./index.html">
+          SHAREHUB
+        </a>
+      </div>
+
+      <!-- Search bar and buttons in sidebar for mobile view -->
 
 
-
-
-
-
-          </div>
-
-        </div>
-        <div id="cap" class="row g-0 p-3 ">
+      <div id="menu" class="row g-0 flex-grow-1 p-3">
+        <div class="col overflow-auto">
+          <ul class="nav nav-pills nav-fill d-flex flex-column">
+            <li class="navitem">
+              <a class="nav-link" aria-current="page" href="./Users.html"> Dashboard</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link " href="./edit-profile.html"> Profile</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link" href="#"> Settings</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link"> Activity</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link active" href="./faq.html">FAQ</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link " href="./Terms.html"> Terms and Policy</a>
+            </li>
+            <li class="navitem">
+              <a class="nav-link " href="./dmca.html">DMCA Policy</a>
+            </li>
+          </ul>
         </div>
       </div>
-      <div id="main" class="col d-flex flex-column">
-        <div id="filters" class="row g-0 p-3 border-bottom">
-          <div id="navbar" class="row g-0 p-3 bg-body-tertiary border-bottom">
-            <div class="container text-center">
-              <div class="row">
-                <div class="col hhead">
-                  <div class="search_wrap search_wrap_3">
-                    <div class="search_box">
-                      <input type="text" class="input" placeholder="search...">
-                      <div class="btn btn_common">
-                        <i class="fas fa-search"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col hhead">
-
-                    <div style="display: flex; color: white; align-items: center ; gap: 12px;
-                              ">
-                      <i class="fa-regular fa-bell"></i>
-                      <div class="user-profile">
-                        <img class="user-profile-img" src="./assets/profile_icon.png" alt="User Profile">
-                        <span class="user-name">Admin</span>
-                      </div>
-                    </div>
-
-                    <div>
-                      <a class="button upload-button" href="./Upload.html">Upload <i class="fa-solid fa-upload"></i></a>
-                      <a class="button logout-button" href="./signin.html">Login <i
-                          class="fa-solid fa-arrow-right"></i></a>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
 
 
-
-            </div>
-
-            <H1 style="    color: white;
-                padding: 25px 0 0 0;
-            
-                ">FAQs</H1>
+      <div class="search_wrap search_wrap_6 smob">
+        <div class="search_box ">
+          <input type="text" class="input" placeholder="search...">
+          <div class="btn btn_common">
+            <i class="fas fa-search"></i>
           </div>
-          <div id="content" class="row g-0 flex-grow-1 p-3">
-            <div class="wrapper">
-              <h1>Frequently Asked Questions</h1>
+        </div>
+      </div>
 
-              <div class="faq">
-                <button class="accordion">
-                  What is Krushi?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Krushi is a Public Charitable Trust designed to carry out farming on
-                    extensive scale Natural & Sustainable methods.
-                  </p>
+      <div class="sidebar-buttons">
+        <a class="button upload-button btn btn-primary" href="./signin.html">Login <i
+            class="fa-solid fa-arrow-right"></i></a>
+        <a class="button logout-button btn btn-danger" href="./signup.html">Sign Up <i
+            class="fa-solid fa-upload"></i></a>
+      </div>
+
+
+      <div id="cap" class="row g-0 p-3"></div>
+    </div>
+
+    <div id="main" class="col d-flex flex-column">
+      <!-- Toggle button for mobile -->
+      <div class="toggle-btn p-3" onclick="toggleSidebar()">
+        <i class="fa-solid fa-bars"></i>
+        <h2 class="logo-m" href="./index.html">
+          SHAREHUB
+        </h2>
+      </div>
+
+      <div id="filters" class="row g-0 p-3 border-bottom">
+        <div id="navbar" class="row g-0 p-3 bg-body-tertiary border-bottom">
+          <div class="container text-center">
+            <div class="row justify-content-between align-items-center">
+              <div class="col-lg-6 col-md-6 SeachB">
+                <div class="search_wrap search_wrap_3">
+                  <div class="search_box">
+                    <input type="text" class="input" placeholder="search...">
+                    <div class="btn btn_common">
+                      <i class="fas fa-search"></i>
+                    </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="faq">
-                <button class="accordion">
-                  How does it work?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                    saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                    ullam, iure eligendi harum eaque hic corporis debitis porro
-                    consectetur voluptate rem officiis architecto.
-                  </p>
+              <div
+                class="col-lg-6 col-md-6 text-end d-flex justify-content-center justify-content-lg-end align-items-center">
+                <div class="user-profile me-3">
+                  <img class="user-profile-img" src="./assets/profile_icon.png" alt="User Profile">
+                  <span class="user-name">Admin</span>
                 </div>
-              </div>
 
-              <div class="faq">
-                <button class="accordion">
-                  What are the major challanges of current agriculture?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                    saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                    ullam, iure eligendi harum eaque hic corporis debitis porro
-                    consectetur voluptate rem officiis architecto.
-                  </p>
-                </div>
-              </div>
-
-              <div class="faq">
-                <button class="accordion">
-                  How does the Krushi address the above challanges?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                    saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                    ullam, iure eligendi harum eaque hic corporis debitis porro
-                    consectetur voluptate rem officiis architecto.
-                  </p>
-                </div>
-              </div>
-
-              <div class="faq">
-                <button class="accordion">
-                  How can I be a part of Krushi?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                    saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                    ullam, iure eligendi harum eaque hic corporis debitis porro
-                    consectetur voluptate rem officiis architecto.
-                  </p>
-                </div>
-              </div>
-
-              <div class="faq">
-                <button class="accordion">
-                  How does it work?
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-                <div class="pannel">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                    saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                    ullam, iure eligendi harum eaque hic corporis debitis porro
-                    consectetur voluptate rem officiis architecto.
-                  </p>
+                <div class="btngroup">
+                  <a class="button upload-button btn btn-primary" href="./Upload.html">Upload <i
+                      class="fa-solid fa-upload"></i></a>
+                  <a class="button logout-button btn btn-danger" href="./signin.html">Login <i
+                      class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
             </div>
           </div>
+          <h1 style="color: white; padding: 25px 0 0 0;">FAQs</h1>
         </div>
+
+        <div id="content" class="row g-0 flex-grow-1 p-3">
+          <div class="wrapper">
+            <h1>Frequently Asked Questions</h1>
+
+            <div class="faq">
+              <button class="accordion">
+                What is Krushi?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Krushi is a Public Charitable Trust designed to carry out farming on
+                  extensive scale Natural & Sustainable methods.
+                </p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <button class="accordion">
+                How does it work?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+                  saepe molestiae distinctio asperiores cupiditate consequuntur dolor
+                  ullam, iure eligendi harum eaque hic corporis debitis porro
+                  consectetur voluptate rem officiis architecto.
+                </p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <button class="accordion">
+                What are the major challanges of current agriculture?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+                  saepe molestiae distinctio asperiores cupiditate consequuntur dolor
+                  ullam, iure eligendi harum eaque hic corporis debitis porro
+                  consectetur voluptate rem officiis architecto.
+                </p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <button class="accordion">
+                How does the Krushi address the above challanges?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+                  saepe molestiae distinctio asperiores cupiditate consequuntur dolor
+                  ullam, iure eligendi harum eaque hic corporis debitis porro
+                  consectetur voluptate rem officiis architecto.
+                </p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <button class="accordion">
+                How can I be a part of Krushi?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+                  saepe molestiae distinctio asperiores cupiditate consequuntur dolor
+                  ullam, iure eligendi harum eaque hic corporis debitis porro
+                  consectetur voluptate rem officiis architecto.
+                </p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <button class="accordion">
+                How does it work?
+                <i class="fa-solid fa-chevron-down"></i>
+              </button>
+              <div class="pannel">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+                  saepe molestiae distinctio asperiores cupiditate consequuntur dolor
+                  ullam, iure eligendi harum eaque hic corporis debitis porro
+                  consectetur voluptate rem officiis architecto.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <script>
+            var acc = document.getElementsByClassName("accordion");
+            var i;
+
+            for (i = 0; i < acc.length; i++) {
+              acc[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                this.parentElement.classList.toggle("active");
+
+                var pannel = this.nextElementSibling;
+
+                if (pannel.style.display === "block") {
+                  pannel.style.display = "none";
+                } else {
+                  pannel.style.display = "block";
+                }
+              });
+            }
+          </script>
+
+       
       </div>
-  </body>
+    </div>
+  </div>
 
+  <script>
+    // Function to toggle sidebar on mobile screens
+    function toggleSidebar() {
+      const sidebar = document.getElementById("sidebar");
+      sidebar.classList.toggle("show");
+    }
+  </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
-    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha512-3P8rXCuGJdNZOnUx/03c1jOTnMn3rP63nBip5gOP2qmUh5YAdVAvFZ1E+QLZZbC1rtMrQb+mah3AfYW11RUrWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-  <script src="./Js/script.js"></script>
-
-
-  <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-
-    for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function () {
-        this.classList.toggle("active");
-        this.parentElement.classList.toggle("active");
-
-        var pannel = this.nextElementSibling;
-
-        if (pannel.style.display === "block") {
-          pannel.style.display = "none";
-        } else {
-          pannel.style.display = "block";
-        }
-      });
-    }
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
